--- a/animDataInput.css
+++ b/animDataInput.css
@@ -3,7 +3,7 @@
     width: 97vw;
     height: 95vh;
     padding: 20px;
-    border-style: inset;
+		border : 1px lightblue solid;
     border-radius: 22px;
     margin : 8px;
 }
@@ -172,18 +172,17 @@
 }
 #detail_fs_min {
   position : relative;
-  border-style: inset;
+  border : 1px lightblue solid;
    top : -145px; 
   width : 98%;
   height : 85%;
   margin : 1px;
   overflow : auto;
   overflow-x : hidden;
-  white-space : nowrap;
 }
 #pgButtons {
     position: relative;
-	top : -150px;
+	top : -135px;
     width : auto;
     left : 20px;
     z-index: 3;
@@ -192,16 +191,20 @@
 	position : relative;
 	border : 1px black dashed;
   	background-color : rgba(205,135, 12, 0.7);
-    padding-top: 3px;
-    top : -370px;  
-    width : 170px;
-    padding : 10px;
-    left : 50%;
+    padding: 3px;
+    border-radius : 5px;
+    top : -170px; 
+    margin : 2px;
+    width : 112px;
+    left : 0px;
+    height  : auto;
 }
 .thumbpic {
 	position : relative;
-	width : 150px;
-	height : 150px;
+	width : 100px;
+	height : 100px;
+    left : 0px;
+    top : 0px;
 }
 #images {
 position : relative;
@@ -305,7 +308,6 @@ position : relative;
     top : 50%;
     left : 30%;
     width : auto;
-    max-width : 50vw;
     height : 250px;
     border-radius : 20px;
     border-style : outset;
@@ -315,6 +317,7 @@ position : relative;
     padding : 10px;
     
 }
+
     
 #shortSrcBlock {
      position : absolute;
@@ -480,3 +483,18 @@ fieldset {
   text-decoration : underline;
   
 }
+.dm-uploader {
+    top : -170px;
+    height : 100px;
+}
+.dm-uploader h3 {
+    display : none;
+}
+
+.card {
+    top : -170px;
+    width : 100%;
+    font-size : x-small;
+    
+}
+
