--- a/Smain.css
+++ b/Smain.css
@@ -3,11 +3,15 @@
 	border : 1px lightblue solid;
 	border-radius : 10px;
 	padding : 5px;
-	width : 99%;
+	width : 95%;
 	left : 0px;
-	height : auto;
+	height : 520px;
 }
-
+.findOption img:hover{
+	position : relative;
+	max-width : 300%;
+	width : 120%;
+}
 h1 {
 position : relative;
 font-size : large;
@@ -18,6 +22,8 @@ font-size : large;
 	height : 10%;
 	margin-left : 6%;
 	padding : 5px;
+	font-size : small;
+	top : -30px;
 }
 
 #logo_image_holder {
@@ -38,8 +44,8 @@ float : right;
 #loginLink {
 	left : 3%;
 	z-index: 6;
-	top : 44px;
-	font-size : x-large;
+	top : 34px;
+	font-size : large;
 	left : 10%
 	
 }
@@ -75,36 +81,57 @@ float : right;
 	padding : 5px;
 	width : 95%;
 	top : 60px;
+	height : 340px;
 	
+}
+.findOption .contextHelp{
+	display : none;
 }
 #MainallContainer #detail_fs_main {
   position : relative;
   border-style: outset;
-  top : -50px;
+  top : -40px;
   width : 95%;
   padding : 5px;
-  height : auto;
+  height : 430px;
   border-radius : 25px;
   left: 2%;
+	overflow : auto;
+	padding-bottom : 15px;
 }
 
 #adminBlockholder {
-
-
 	background-color : lightblue;
 	border-radius : 10px;
 	margin : 5px;
 	padding : 2px;
 	left : 5px;
+  height : 20%;
 
 }
 #adminBlock {
 	position : relative;
 
 }
+#regholder {
+	position : relative;
+	height : 80px;
+}
+#regpic img {
+	width : 50%;
+	height : 50%;
+	top : -2px;
+}
+#greetA {
+	left : 90px;
+	width : 150px;
+}
 #greetA label {
+	position : relative;
 	font-size : large;
-	width : 130px
+	width : 150px;
+	top : 30px;
+	left : 0px;
 }
 #greetA label:hover {
 	text-decoration:  underline;
@@ -114,8 +141,11 @@ float : right;
 	position: relative;
 	font-size: large;
 	color: blue;
-	top: -110px;
-	left: 140px;
+	top: -60px;
+	left: 100px;
+	width :100px;
+	max-width : 150px;
+	overflow : auto;
 }
 
 #register {
@@ -137,31 +167,44 @@ float : right;
 }
 #FindInfo {
 	position : relative;
-
 	background-color : lightblue;
 	border-radius : 10px;
 	margin-right : 5px;
 	padding : 5px;
 	width : 50%;
-
+	height : 320px;
+	overflow : auto;
 }
 
 #FindInfo img {
 	position : relative;
 	cursor : pointer;
 	margin-left : 5px;
-	width : 80%;
+	width : 55%;
+	height : 50%;
+}
+#FindInfo img:hover {
+	width : 60%;
 }
 #FindInfo h2 {
 	position : relative;
-	font-size : large;
+	font-size : small;
 	text-decoration : underline;
+	text-align: left;
 }
 .findHeading {
 	position : relative;
-	left : 25%;
+	left : 5%;
 }
-
+#loginhead {
+	font-size : x-large;
+}
+#MainallContainer #dateTime{
+	position : relative;
+	top : -10px;
+	font-size : medium;
+	left : -70px;
+}
 #LinkList {
 	position : relative;
 	width : 40%;
