--- a/Src_smaller.css
+++ b/Src_smaller.css
@@ -162,31 +162,44 @@
 }
 
 /* Glossary styles*/
-#GlBody .ac {
-  left : -5px;
-  width : 98%;
-  max-height : 100vh;
-  overflow : auto;
-  scroll : auto;
+#mainContainer {
+
+
+  width : 100%;
+  max-height : 90vh;
+  margin-bottom : 0px;
+
+
   
 }
 #GlBody #dateTime {
   position : relative;
-  top : 10px;
-  left : 10px;
-  color : green
+  top : -10px;
+  left : 0px;
+  color : green;
+  font-size : small;
   
 }
 #GlBody #logo_image{
   position : relative;
    width : 50%; 
   left : 50%;
-  top : -40px;
+  top : -50px;
 }
 #subContainer {
   position : relative; 
-  width : auto;
+  width : 100%;
+  margin : 0px;
+  height : 80%;
+  overflow : auto;
+  border : 1px lightblue solid;
+  border-radius : 12px;
   
+}
+#glossEntry {
+position : relative;
+border : none;
+height : 90%;
 }
 #glossEntry img {
   position : relative;
@@ -202,23 +215,17 @@
 }
 #glossEntry .itemC {
   position : relative;
-  width : 90%;
+  width : 100%;
   height : auto;
   overflow : auto;
-  max-height: 80%;
-  padding-bottom : 30px;
-  border-bottom : 1px lightblue solid;
+	border : none;
   }
 #glossEntry textarea {
   position : relative;
   height : 40px;
 
   }
-#glossEntry input {
-  position : relative;
-  width : 80%;
-  font-size : medium;
-  }
+
 #glossEntry label {
   position : relative;
   align : left;
@@ -240,24 +247,62 @@
 }
 #GlBody #glHeading {
   position : relative; 
-  text-align : center;
+
   font-size : large;
   text-decoration : underline;
+
+  top : -55px;
+  width : 200px;
 }
 #GlBody #pgButtons {
   position : relative;
-  left : 2%;
-  
+  left : 0%;
+  width : 250px;
+  top : -65px;
 }
 #GlBody #pgButtons input {
   position : relative;
   border-radius : 5px;
   font-size : large;
-  width : auto
+  width : auto;
+  padding : 0px;
   
 }
 #GlBody #pgButtons a {
   position : relative;
   font-size : large;
   
+}
+#textstuff {
+	position: relative;
+	display: -moz-groupbox;
+	width: 99%;
+	left: 0px;
+}
+.dm-uploader {
+padding : 5px;
+}
+.dm-uploader .btn {
+position : relative;
+  top : -20px;
+  border : none;
+  padding : 5px;
+  width : 170px;
+  left : -30px;
+  
+}
+#imgDisplay {
+position : relative;
+border : 1px black solid;
+top : 450px;
+left : -140px;
+}
+.thumbpic {
+ position : relative;
+ width : 120px;
+ height : 120px;
+}
+#ajaxBox {
+  left : 40px;
+  width : 80%
 }
