--- a/lnfsmall.css
+++ b/lnfsmall.css
@@ -1,9 +1,9 @@
 /*LnF styles*/
 #LnFallContainer{
    position : relative;
-  width : 93vw;
-  height : 99%; 
-  padding : 20px;
+  width : 93%;
+  /*! height : auto; */ 
+  padding : 10px;
   border : 1px lightblue solid;
   border-radius : 15px;
 	top : 20px;
@@ -11,16 +11,15 @@
 }
 #logo_image_holder{
  position: relative;
-    left : 35% ;
+    left : 25% ;
     margin-left: auto;
     margin-right: auto;
     width : 60%;
     height : 45%;
-    top : -65px;
+    top : -55px;
 }
  #logo_image {
-	 height : 60%;
-  width : 70%;
+  width : 100%;
   z-index : 6;
 }
 #dateTime {
@@ -35,12 +34,14 @@
 	
 }
 #LostBlock {
-	position : absolute;
-	width : 80%;
-	height : 90%;
+	position : relative;
+	width : 95%;
+	height : 320px;
 	z-index : 4;
 	background-color : burlywood;
-	overflow : scroll
+  margin : 5px;
+
+  
 }
 #messDiv {
 	position : relative;
@@ -59,6 +60,7 @@
 	left : -10%;
 	max-width : 80%;
 	padding-top : 5px;
+  
 }
 
 
@@ -71,6 +73,7 @@
 	top : 15px;
 left : 30px;	
 	padding : 5px;
+  display : none;
 }
 #Fheading {
 	position : relative;
@@ -81,27 +84,30 @@ left : 30px;
 #Lheading {
 	position : relative;
 	top : -3%;
-	left : 0%;
+	left : -30%;
 }
 .italic {
 	font-style : italic;
 }
 #pgButtonslnf {
   position: absolute;
-  top : 150px;
+  top : 100px;
   font-size : large;
   left : 8%;
-  width : 200px;
+  width : 300px;
 }
-
+a {
+  font-size : x-large;
+  color : black
+}
+a:hover {
+  color : lightblue;
+  text-decoration : underline;
+  
+}
 #pgButtonslnf li {
   position : relative;
-  float : left;
-  margin : 5px;
-  top : -50px;
   width : 90px;
-  border-radius  : 10px;
-  text-align : center;
   padding : 3px;
   
 }
@@ -114,8 +120,9 @@ left : 30px;
   border : 1px lightblue solid;
   top : -35%;
   width : 95%;
-  padding : 15px;
-  height : 85%;
+  padding : 5px;
+  padding-top : 10px;
+  height : 350px;
   border-radius : 25px;
   left: 2%;
   overflow : auto;
@@ -124,9 +131,9 @@ left : 30px;
 }
 #messDiv {
   position : relative;
-  height : 75%;
+  height : 250px;
   overflow : auto;
-  top : 20%;
+  top : 30px;
   left : 5px;
   width : 90%;
 }
@@ -159,6 +166,6 @@ left : 30px;
   left : 30%;
   font-size : x-large;
   text-decoration : underline;
-  width : 400px;
+  width : 150px;
   
 }
