--- a/minDataInputS.css
+++ b/minDataInputS.css
@@ -98,7 +98,7 @@
 	position : relative;
 	max-width : 100%;
 	border : dashed 1px green;
-	height : 100px;
+	height : 150px;
 	overflow : auto;
     border-radius : 10px;
 }
@@ -186,7 +186,7 @@
 #pgButtons {
     position: relative;
 	top : -50px;
-    width : auto;
+    width : 250px;
     left : 20px;
     z-index: 3;
 }
@@ -306,11 +306,10 @@ position : relative;
 .dialogC {
      position : absolute;
     border : 3px black solid;
-    top : 50%;
-    left : 30%;
-    width : auto;
-    max-width : 50vw;
-    height : 250px;
+    top : 30%;
+    left : 10%;
+    width : 80%;
+    height : 300px;
     border-radius : 20px;
     border-style : outset;
     background-color :gainsboro;
@@ -318,6 +317,10 @@ position : relative;
     overflow: auto;
     padding : 10px;
     
+}
+.dialogC input {
+    width : 80%;
+    font-size : small
 }
     
 #shortSrcBlock {
@@ -485,13 +488,18 @@ fieldset {
   border : none;
   background : none;
   font-size: large;
-  text-decoration : underline;
-  cursor : pointer;
+  text-decoration : none;
    margin-right : 10px;
-  color: blue;
+  color: black;
+   cursor : pointer;
+
   }
 .linkC:hover {
-  color : green;
-  cursor : pointer;
-  
+  color : lightblue;
+  text-decoration : underline;
+}
+#ajaxBox {
+    left : 10%;
+    width : 80%;
+    
 }
