--- a/smallerDevice.css
+++ b/smallerDevice.css
@@ -9,12 +9,14 @@
 #logo_image_holder {
 	position : relative;
 	/*! width : auto; */
+	width : 60%;
+	height :auto;
 	left : 0px;
 }
 #compContainer #logo_image {
 	position : relative;
 	left : 85%;
-	width : 60%;
+	width : 100%;
 	height :auto;
 	top : -5px;
 	height: auto;
@@ -46,12 +48,12 @@
   border : none;
   background : none;
   font-size: large;
-  text-decoration : underline;
   cursor : pointer;
   }
 .linkC:hover {
-  color : blue;
-  
+  color : lightblue;
+  text-decoration : underline;
+
 }
 #FindInfo .findHeading {
 	font-size : small;
@@ -357,8 +359,8 @@ height : 30px;
 }
 #DETallContainer #dateTime {
 	position : relative;
-	left :-4%;
-	top : -5px;
+	left :4%;
+	top : -0px;
 	font-size : medium;
 	width : 60%;
 }
@@ -408,6 +410,7 @@ height : 30px;
 	left : -0px;
 	top : -75px;
 	height : 78%;
+	border : 1px lightblue solid;
 }
 #DETallContainer #catHeading {
 	font-size : x-large;
@@ -423,9 +426,21 @@ height : 30px;
 	
 }
 #ratehead {
-	padding: 8px;
+	position : absolute;
+	padding: 5px;
 	font-size: large;
 	text-decoration: underline;
+	border-radius : 12px;
+	border : 1px lightblue solid;
+	background-color : yellow;
+	top : 120px;
+	left : -30%;
+	cursor : pointer;
+	z-index : 3;
+	display : block;
+}
+#ratehead:hover {
+	left : -4%;
 }
 p {
 	position : relative;
@@ -449,74 +464,76 @@ p {
 }
  #DETallContainer #otherDetails {
     position: relative;
-    width: 43%;
+    width: 90%;
     border-radius: 5px;
     padding: 2px;
     margin-top: 5px;
     overflow: auto;
-    height: 120px;
+    height: 80px;
 	top : 0px;
 }
 #otherDetails .oDC .labelClass  {
 	position : relative;
 	text-decoration: none;
-	font-size :  large;
 	padding : 1px;
-	width : 20%;
 	width : 80%
+		font-size : large;
 }
 #oDDOutput {
     position: relative;
     border: 1px black dashed;
     border-radius: 12px;
     padding: 10px;
-    max-height: 120px;
-    max-width: 50%;
+    height: 100px;
+    width: 90%;
+	max-width : 100%;
     overflow: auto;
-    left: 45%;
+    left: 0%;
     padding-top: 3px;
-	top : -100px;
+	top : -0px;
 }
 #viewsBlock {
-    position: relative;
+    position: absolute;
     border: lightblue 1px solid;
-    border-radius: 20px;
+    border-radius: 12px;
     padding: 5px;
     width: 44vw;
     font-size: large;
-    top: -70px;
-    left: -1px;
-	margin-right : 5px;
-	margin-bottom : 0px;
+    top: 180px;
+    left: -40%;
+	height : 40px;
+}
+#viewsBlock:hover {
+	left : -2%;
 }
 #ratebut {
-    position: relative;
-    border: black 1px solid;
-    border-radius: 20px;
-    height: 40px;
-	  min-width : 15%;
-	  width : 180px;
-    top: -270px;
-    left: 47%;
-    font-size: large;
-    text-decoration: underline;
-    background-color: yellow;
+     position: relative; 
+     border: none;
+    /*! border-radius: 20px; */
+     height: 0px; 	  
+	  /*! width : 180px; */
+    /*! top: -270px; */
+    /*! left: 47%; */
+    /*! font-size: large; */
+    /*! text-decoration: underline; */
+    /*! background-color: yellow; */
+	display : none;
 }
 #ratingsBlock {
-    position: relative;
-    border: black 1px solid;
+    position: absolute;
+    border: lightblue 1px solid;
 	background-color: yellow;
     border-radius: 20px;
 	  min-width : 25px;
-    width: 190px;
-    height: 200px;
-    top: -290px;
-    left: 50%;
+    width: 85%;
+    height: 250px;
+    top: 158px;
+    left: -3%;
     display: none;
     overflow: auto;
-    padding-left: 5px;
-	  padding-bottom : 20px;
-	  padding-top : 2px;
+    padding: 15px;
+	z-index : 4;
+	
 }
 /*start guestbook*/
 
@@ -557,6 +574,13 @@ p {
 	margin : 1px;
 	background-color: none;
 	font-size: large;
+}
+#DETallContainer .linkC {
+	text-decoration : none;	
+}
+#DETallContainer .linkC:hover {
+	color : lightblue;
+	text-decoration : underline;
 }
 #pgButtons a {
 	border-radius : 10px;
@@ -628,7 +652,7 @@ p {
 	top : -0px;
 	width : 50%;
 	left : -50%;
-	font-size : large;
+	font-size : small;
 	
 }
 #agreement {
@@ -656,7 +680,7 @@ p {
 	left : 40%;
  width : 200px;
 	height : 40%;
-	top : -60px;
+	top : -55px;
 }
 #REGallContainer #logo_image {
 	height: 70%;
@@ -664,7 +688,7 @@ p {
 }
 #REGallContainer #pgButtons {
 	position : relative;
-	top : -40px;
+	top : -80px;
 	left : 30px;
 }
 
@@ -709,6 +733,7 @@ p {
 	font-size : small;
 	width : 100%;
 	z-index : 8;
+	left: -200px;
 }
 
 #securityInfo label {
@@ -732,8 +757,8 @@ p {
 }
 #imgDisplay {
     position: absolute;
-    top: 25px;
-    left: 74%;
+    top: -25px;
+    left: 66%;
     width: 23%;
     border: orange 1px dashed;
     padding: 1px;
@@ -884,17 +909,14 @@ p {
 	width : 50%;
 	left : -50%;
 }
-#logo_image_holder {
+#DETallContainer #logo_image_holder {
 	position : relative;
-	/*! width : 90%; */
-	left : -100px;
+	width : 40%;
+	left : -20px;
 }
 #MainallContainer #logo_image {
 	position : relative;
-	left : 70%;
-	width : 90%;
-	height : 35%;
-	
+	left : 60%;
 	top: -8%;
 }
 #picHeading {
@@ -1277,4 +1299,29 @@ left : 30px;
 	position : relative;
 	height:  95%;
 	top : -120px;
+}
+.dm-uploader {
+  position : relative;
+  top : 10px;
+  height : 100px;
+}
+.dm-uploader .btn {
+  position : relative;
+  top : -20px;
+  z-index : 4;
+	font-size : small;
+	width : 200px;
+	text-align : center;
+	left : -30px;
+}
+.card {
+  position : relative;
+  top : 10px;
+}
+#headingText {
+	position: relative;
+	font-size: xx-large;
+	top: -70px;
+	left: 30%;
+	text-decoration: underline;
 }
