--- a/vegDataInput.css
+++ b/vegDataInput.css
@@ -3,7 +3,7 @@
     width: 97vw;
     height: 95vh;
     padding: 20px;
-    border-style: inset;
+    border : 1px lightblue solid;
     border-radius: 22px;
     margin : 8px;
     overflow : auto;
@@ -22,7 +22,7 @@
 #logo_image {
   position : relative;
   height : 80%;
-  width : 90%;
+  width : 100%;
   z-index : 1;
   
 }
@@ -173,8 +173,8 @@
 }
 #detail_fs_min {
   position : relative;
-  border-style: inset;
-   top : -145px; 
+    border : 1px lightblue solid;
+    top : -145px; 
   width : 98%;
   height : 85%;
   margin : 1px;
@@ -184,7 +184,7 @@
 }
 #pgButtons {
     position: relative;
-	top : -150px;
+	top : -135px;
     width : auto;
     left : 20px;
     z-index: 3;
@@ -194,10 +194,10 @@
 	border : 1px black dashed;
   	background-color : rgba(205,135, 12, 0.7);
     padding-top: 3px;
-    top : -345px;  
+    top : -170px;  
     width : 170px;
     padding : 10px;
-    left : 52%;
+    left : 0px;
 }
 .thumbpic {
 	position : relative;
@@ -306,7 +306,6 @@ position : relative;
     top : 50%;
     left : 30%;
     width : auto;
-    max-width : 50vw;
     height : 250px;
     border-radius : 20px;
     border-style : outset;
@@ -324,6 +323,11 @@ position : relative;
     left :56%;
     margin: 10px;
     width : 43%;
+    padding : 5px;
+}
+#shortSrcBlock .labelclass {
+    font-size : large;
+    text-decoration : underline;
 }
 #pgDialog {
     position : absolute;
@@ -484,9 +488,17 @@ fieldset {
 }
 .dm-uploader {
     top : -170px;
+    height : 100px;
+}
+.dm-uploader h3 {
+    display : none;
+}
+.dm-uploader .btn {
+    top : -20px;
 }
 .card {
     top : -170px;
+    width : 100%;
+    font-size : x-small;
     
 }
-
