--- a/Badmin.css
+++ b/Badmin.css
@@ -1,5 +1,9 @@
 /*Index Styles*/
-
+body {
+  position : relative;
+  width : 1264px; 
+    height : 884.8px;
+}
 .highlite {
   background-color: yellow;
   color : red;
@@ -211,17 +215,16 @@ position : relative;
 }
 #SFallContainer #catPicsList {
   position : relative;
-  width : 100%;
+  width : 150px;
   height : auto;
   top : 10%;
-  max-height: 40%;
+  max-height: 350px;
 }
 #catPicsList img {
   cursor : pointer;
-   width : 100%; 
-  height : 80%;
+   width : 130%; 
+  height : 100%;
   margin-bottom : 3px;
-  max-height : 200px;
 }
 
 #opt3btSpan {
@@ -404,4 +407,27 @@ position : relative;
     display: block;
     position : ;
     width: 200px;
+}
+#messages {
+  position : relative;
+  width : 95%;
+  height : 200px;
+  overflow : auto;
+  
+}
+.fulltext {
+  position : fixed;
+  width : 400px;
+  height : auto;
+  max-height : 200px;
+  border : 1px lightblue solid;
+  border-radius : 12px;
+  top : 30%;
+  left : 20%;
+  background-color : whitesmoke;
+  padding : 10px;
+  font-size : large;
+}
+td:hover .fulltext{
+  display : block;
 }
