--- a/Bmain.css
+++ b/Bmain.css
@@ -45,6 +45,29 @@ top : 10px;
   font-size : large;
   z-index : 7;
 }
+#dicDiv {
+  position : absolute;;
+  border : 1px black solid;
+  border-radius : 15px;
+  padding : 10px;
+  background-color : yellow;
+  top : 180px;
+  left : 10%;
+  z-index : 10;
+  width:  80%;
+  display : none;
+}
+#dicDiv #cls {
+  position : relative;
+  left : 95%;
+  top : 0px;
+  font-size : xx-large;
+}
+#dicDiv .labelclass {
+  position : relative;
+  left : 30%;
+  font-size : xx-large;
+}  
 #errorDiv #response .labelclass {
   position : relative;
   left : -0px;
