--- a/IBIS_maincss.css
+++ b/IBIS_maincss.css
@@ -63,17 +63,17 @@ top : 10px;
 
 .optImage {
   position : relative;
-  max-width: 150%;
+  max-width: 100%;
   max-height : 160px;
   float : left;
   border-radius : 15px;
-  padding: 6px;
+  padding: 3px;
   width: 120%;
 }
 #greetingDiv{
 position : relative;
 font-size : 28px;
-left : 10%;
+left : 15%;
 color : blue; 
   width : 30%;
   top : ;
@@ -89,9 +89,11 @@ width : auto;
 }
 #regPic {
   position : relative;
-   width : 150px; 
-  height : 150px;
+   max-width: 14%; 
+  /*! height : auto; */
   font-size: 16px;
+  border-radius: 20px;
+  top: 10px;
 }
 
 #LinkList {
@@ -127,14 +129,14 @@ width : auto;
 
 #FindInfo {
     position: relative;
-    width:60%;
+    width:70%;
     height:470px;
     text-align: center;
     text-decoration: underline;
     /*! border: red 1px dashed; */
     padding:2px;
     padding-bottom : 5px;
-    padding-left : 20px;
+    padding-left : 5px;
     top : -60px;
    /*! border-radius : 15px; */
 }
@@ -166,9 +168,9 @@ width : auto;
 }
  .findHeading {
    position : relative;
-   width : 150px;  
+   width : 100px;  
    left : 25%;
-   font-size : 238%;
+   font-size : 200%;
 
 }
 .findOption:hover{
@@ -271,6 +273,19 @@ width : auto;
   border-radius : 15px;
   left : 19px;
 }
+
+#option3btn {
+  position : relative;
+  /*! top : -70px; */
+  
+}
+#option2btn {
+  position : relative;
+  top : 10px;
+  
+}
+
+
 #SFallContainer #logo_image_holder {
     position: relative;
     left: 70%;
@@ -306,7 +321,7 @@ height : 60%;
 position : absolute;
       font-size : 250%;
       text-decoration : underline;
-   top : 20%;
+   top : 120px;
       left : 35%;
       z-index : 4;
 }
@@ -541,7 +556,7 @@ it describes the detailspage*/
 }
 #DETallContainer #catHeading {
   position : relative;
-  left : 30%;
+  left : 10%;
   font-size : 330%;
   width: auto;
 }
